--- a/index.html
+++ b/index.html
@@ -5,9 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/css/style.css" rel="stylesheet">
-    <title>Transitions</title>
+    <title>The Transition Game</title>
 </head>
 <body>
-    
+    <header>
+        <h1 class="h1">
+            The Transition Game!
+        </h1>
+    </header>
+        <a href="/level-1.html" class="box"> 
+            <h1>
+                Press 2 Play!
+            </h1>
+        </a>
+        <div class="goal">
+            Goal
+        </div>
 </body>
 </html>
