--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
     </header>
         <a href="/level-1.html" class="box"> 
             <h1>
-                Press 2 Play!
+                Hover 2 Try!
             </h1>
+            <h2>
+                Press 2 Play!
+            </h2>
         </a>
         <div class="goal">
             Goal
