--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 Hover 2 Try!
             </h1>
             <h2>
-                Press 2 Play!
+                Click 2 Play!
             </h2>
         </a>
         <div class="goal">
