--- a/level-4.html
+++ b/level-4.html
@@ -23,6 +23,9 @@
             Next level
             <img src="/images/arrow-right.png" alt="arrow-right">
         </a>
+        <h2 class="h2-2">
+            MEDIUM!
+        </h2>
     </header>
         <div class="box-4"> 
         </div>
