--- a/level-6.html
+++ b/level-6.html
@@ -23,6 +23,9 @@
             Next level
             <img src="/images/arrow-right.png" alt="arrow-right">
         </a>
+        <h2 class="h2-3">
+            HARD!
+        </h2>
     </header>
         <div class="box-6"> 
         </div>
