--- a/level-2.html
+++ b/level-2.html
@@ -23,6 +23,9 @@
             Next level
             <img src="/images/arrow-right.png" alt="arrow-right">
         </a>
+        <h2 class="h2-1">
+            EASY!
+        </h2>
     </header>
         <div class="box-2"> 
         </div>
