--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <header>
+        <a href="/index.html">
+            <img src="/images/home-icon.png" class="home-button">
+        </a>
         <h1 class="h1">
             The Transition Game!
         </h1>
